Guru: Pembelajaran on progress: tujuan dan kegiatan

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "devDependencies": {
         "@mdi/font": "^5.9.55",
         "axios": "^0.21",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.20",
         "lodash": "^4.17.19",
         "postcss": "^8.3.4",
+        "sass": "^1.32.13",
+        "sass-loader": "^12.1.0",
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.12"
     },
@@ -27,7 +30,7 @@
         "fs": "0.0.1-security",
         "moment": "^2.29.1",
         "qrious": "^4.0.2",
-        "v-qrcode": "^1.0.3",
+        "tiptap-vuetify": "^2.24.0",
         "vue": "^2.6.12",
         "vue-apexcharts": "^1.6.0",
         "vue-qrious": "^1.6.0",
